--- a/password-manager-editor.html
+++ b/password-manager-editor.html
@@ -1084,7 +1084,7 @@
         // データ表示（カード）
         function renderData(data) {
             cardContainer.innerHTML = '';
-            resultCount.textContent = `検索結果: ${data.length} 件`;
+            resultCount.textContent = `検索結果: ${data.length}/${accounts.length} 件`;
             
             data.forEach(account => {
                 const card = createCard(account);
